--- a/public/generation.html
+++ b/public/generation.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Story Generator Chat App</title>
+  <title>Story Generation</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="app-container"></div>
-  <script src="app.js"></script>
+  <div id="generation-app"></div>
+  <script src="generation.js"></script>
 </body>
 </html>
