--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,201 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Story Generator Chat App</title>
+  <title>Cognibook – AI Story Generator</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    :root {
+      --green-main: #00e676;
+      --green-dark: #009e4f;
+      --green-light: #aaffd6;
+      --bg-gradient: linear-gradient(135deg, #0f2027 0%, #2f7e4f 60%, #00e676 100%);
+      --card-bg: rgba(20,40,30,0.85);
+      --border-glow: 0 0 12px #00e67688;
+      --text-main: #eafff7;
+      --text-muted: #aaffd6;
+      --accent: #00e676;
+    }
+    body {
+      margin: 0;
+      min-height: 100vh;
+      font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
+      background: var(--bg-gradient);
+      color: var(--text-main);
+      display: flex;
+      flex-direction: column;
+    }
+    .nav {
+      width: 100%;
+      max-width: 100vw;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1.2rem 2rem 1.2rem 2rem;
+      background: transparent;
+      position: relative;
+      z-index: 2;
+    }
+    .nav-left {
+      display: flex;
+      align-items: center;
+      gap: 1.2rem;
+    }
+    .logo-placeholder {
+      width: 48px; height: 48px;
+      background: var(--green-dark);
+      border-radius: 50%;
+      box-shadow: var(--border-glow);
+      display: flex; align-items: center; justify-content: center;
+      font-size: 2rem; color: var(--green-light);
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+    .site-name {
+      font-size: 2.1rem;
+      font-weight: 700;
+      letter-spacing: 0.08em;
+      color: var(--green-main);
+      text-shadow: 0 0 8px #00e67644;
+    }
+    .nav-right {
+      display: flex;
+      align-items: center;
+    }
+    .login-btn {
+      background: var(--card-bg);
+      color: var(--accent);
+      border: 2px solid var(--accent);
+      border-radius: 2em;
+      padding: 0.7em 2em;
+      font-size: 1.1em;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: var(--border-glow);
+      transition: background 0.2s, color 0.2s, box-shadow 0.2s;
+      text-decoration: none;
+    }
+    .login-btn:hover {
+      background: var(--green-main);
+      color: #1a2a1a;
+      box-shadow: 0 0 24px #00e676cc;
+    }
+    .hero {
+      flex: 1;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 3rem;
+      padding: 2rem 3rem 0 3rem;
+      position: relative;
+    }
+    .hero-info {
+      max-width: 520px;
+      background: var(--card-bg);
+      border-radius: 2.5em;
+      box-shadow: var(--border-glow);
+      padding: 2.5em 2.5em 2em 2.5em;
+      display: flex;
+      flex-direction: column;
+      gap: 1.2em;
+      border: 1.5px solid var(--green-main);
+      backdrop-filter: blur(2px);
+    }
+    .hero-title {
+      font-size: 2.7rem;
+      font-weight: 800;
+      color: var(--green-main);
+      margin-bottom: 0.5em;
+      text-shadow: 0 0 16px #00e67644;
+    }
+    .hero-desc {
+      font-size: 1.25rem;
+      color: var(--text-muted);
+      margin-bottom: 1.2em;
+    }
+    .examples {
+      margin-top: 1.2em;
+      display: flex;
+      flex-direction: column;
+      gap: 0.7em;
+    }
+    .example-card {
+      background: rgba(0,230,118,0.08);
+      border-radius: 1.2em;
+      padding: 1em 1.5em;
+      color: var(--text-main);
+      font-size: 1.05em;
+      box-shadow: 0 0 8px #00e67622;
+      border-left: 4px solid var(--green-main);
+      font-style: italic;
+    }
+    .hero-image {
+      min-width: 340px;
+      max-width: 420px;
+      height: 420px;
+      background: linear-gradient(120deg, #00e67633 0%, #009e4f 100%);
+      border-radius: 2.5em;
+      box-shadow: 0 0 32px #00e67644;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      overflow: hidden;
+    }
+    .ai-art {
+      width: 80%;
+      height: 80%;
+      object-fit: contain;
+      filter: drop-shadow(0 0 24px #00e67688);
+      opacity: 0.95;
+    }
+    @media (max-width: 900px) {
+      .nav {
+        padding: 1rem 0.7rem 1rem 0.7rem;
+      }
+      .hero {
+        flex-direction: column;
+        gap: 2rem;
+        padding: 2rem 1rem 0 1rem;
+      }
+      .hero-image {
+        min-width: 220px;
+        max-width: 320px;
+        height: 220px;
+      }
+      .hero-info {
+        padding: 1.5em 1em 1em 1em;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div id="app-container"></div>
-  <script src="app.js"></script>
+  <nav class="nav">
+    <div class="nav-left">
+      <div class="logo-placeholder">🧠</div>
+      <span class="site-name">cognibook</span>
+    </div>
+    <div class="nav-right">
+      <a href="generation.html" class="login-btn">Login / Register</a>
+    </div>
+  </nav>
+  <section class="hero">
+    <div class="hero-info">
+      <div class="hero-title">AI-Powered Story Generation</div>
+      <div class="hero-desc">
+        Cognibook uses advanced AI to help you create immersive, multi-chapter stories in any genre, style, or language. Just describe your idea, and let the AI write your book chapter by chapter.<br>
+        <span style="color:var(--green-main);font-weight:600;">Powered by Gemini 2.5 Flash Thinking</span>
+      </div>
+      <div class="examples">
+        <div class="example-card">"Write a cyberpunk detective story in Polish, with a dark, mysterious vibe."</div>
+        <div class="example-card">"Create a fantasy adventure for kids, in a playful style, 5 chapters."</div>
+      </div>
+    </div>
+    <div class="hero-image">
+      <!-- Placeholder for AI art or futuristic image -->
+      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="AI Art" class="ai-art" />
+    </div>
+  </section>
 </body>
 </html>
